--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+body{
+  background-color:#E4EFE7;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top:10px;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.person{
+  margin: 10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+button{
+  background-color: aqua;
+  color:#fff ;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px;
+  border:none;
+  text-transform: uppercase;
 }
